objects/SO_Invoice__c.object
<CustomObject>
    <label>Invoice</label>
    <nameField>
        <displayFormat>INV-{00000000}</displayFormat>
        <label>Invoice Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoices</pluralLabel>
    <sharingModel>Private</sharingModel>
    <fields>
        <fullName>SO_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>$Source.SO_Opportunity__c</field>
                <operation>equals</operation>
                <valueField>Order.OpportunityId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SO_Value__c</fullName>
        <label>Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SO_Status__c</fullName>
        <formula>If( SO_Is_Void__c ,$Label.SO_Invoice_Void ,
If(NOT(ISBLANK(SO_SAP_Invoice_Date__c)),$Label.SO_Invoice_SAP_Invoice_Paid, IF(NOT(ISBLANK(SO_Payment_Made_Date__c)),$Label.SO_Invoice_Payment_Request_Paid, IF(NOT(ISBLANK(SO_Payment_Request_Sent_Date__c)),$Label.SO_Invoice_Payment_Request_Sent, $Label.SO_Invoice_Planned_Request)) ) )</formula>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Is_Void__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Void</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SO_AccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SO_Build_Stage__c</fullName>
        <label>Associated Build Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Stage 1</fullName>
                </value>
                <value>
                    <fullName>Stage 2</fullName>
                </value>
                <value>
                    <fullName>Stage 3</fullName>
                </value>
                <value>
                    <fullName>Stage 4</fullName>
                </value>
                <value>
                    <fullName>Stage 5</fullName>
                </value>
                <value>
                    <fullName>ABS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SO_Opportunity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SO_SAP_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SAP Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>SO_SAP_Account__c.SO_Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.SO_AccountId__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SO_SAP_Account__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SO_Send_By_Date__c</fullName>
        <label>Send By Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SO_Payment_Amount__c</fullName>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SO_Payment_Due_Date__c</fullName>
        <formula>IF(NOT(ISBLANK(SO_Payment_Request_Sent_Date__c)),SO_Payment_Request_Sent_Date__c + 30,null)</formula>
        <label>Payment Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SO_SAP_Invoice_Date__c</fullName>
        <label>SAP Invoice Paid Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SO_Payment_Made_Date__c</fullName>
        <label>Payment Made Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SO_SAP_Invoice_Value__c</fullName>
        <label>SAP Invoice Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SO_Age_of_SAP_Invoice__c</fullName>
        <formula>If(NOT(ISNULL(SO_SAP_Invoice_Date__c)),SO_SAP_Invoice_Date__c - SO_SAP_Invoice_Raised_Date__c,
	If(NOT(ISNULL(SO_SAP_Invoice_Raised_Date__c)), SO_SAP_Invoice_Raised_Date__c - SO_Payment_Request_Sent_Date__c,
		If((NOT(ISNULL(SO_Payment_Request_Sent_Date__c)) &amp;&amp; ISNULL(SO_SAP_Invoice_Raised_Date__c) ),TODAY() - CASE(MOD( SO_Payment_Request_Sent_Date__c - DATE(1900, 1, 6), 7),
			0,SO_Payment_Request_Sent_Date__c + 2,
			1,SO_Payment_Request_Sent_Date__c + 1,
			2,SO_Payment_Request_Sent_Date__c + 1,
			3,SO_Payment_Request_Sent_Date__c + 1,
			4,SO_Payment_Request_Sent_Date__c + 1,
			5,SO_Payment_Request_Sent_Date__c + 1,
			6,SO_Payment_Request_Sent_Date__c + 3,SO_Payment_Request_Sent_Date__c +1),null
		)
	)
)</formula>
        <label>Age of SAP Invoice</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SO_SAP_Invoice_Number__c</fullName>
        <label>SAP Invoice Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Age_of_Payment_Request__c</fullName>
        <formula>If(ISNULL( SO_Payment_Request_Sent_Date__c ), TODAY() - SO_Send_By_Date__c ,SO_Payment_Request_Sent_Date__c - SO_Send_By_Date__c )</formula>
        <label>Age of Payment Request</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SO_Age_of_Payment_Received__c</fullName>
        <formula>If(ISNULL( SO_Payment_Made_Date__c ), TODAY() - SO_Payment_Due_Date__c, SO_Payment_Made_Date__c  - SO_Payment_Due_Date__c)</formula>
        <label>Age of Payment Received</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SO_SAP_Invoice_Raised_Date__c</fullName>
        <label>SAP Invoice Raised Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SO_Payment_Request_Sent_Date__c</fullName>
        <label>Sent Date</label>
        <type>Date</type>
    </fields>
    <recordTypes>
        <fullName>SO_Deposit</fullName>
        <active>true</active>
        <label>Deposit</label>
    </recordTypes>
    <recordTypes>
        <fullName>SO_Invoice</fullName>
        <active>true</active>
        <label>Invoice</label>
    </recordTypes>
    <recordTypes>
        <fullName>SO_Credit_Note</fullName>
        <active>true</active>
        <label>Credit Note</label>
    </recordTypes>
    <validationRules>
        <fullName>SO_Opportonity_or_order</fullName>
        <active>true</active>
        <description>Invoice should have either order or opportunity</description>
        <errorConditionFormula>AND(ISBLANK(SO_Opportunity__c),ISBLANK(SO_Order__c))</errorConditionFormula>
        <errorMessage>Either Opportunity or Order should be populated</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SO_Validate_Invoice_SAP_Paid_Date</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISBLANK(SO_SAP_Invoice_Date__c)) &amp;&amp; SO_SAP_Invoice_Date__c &lt; SO_SAP_Invoice_Raised_Date__c</errorConditionFormula>
        <errorMessage>SAP Invoice Date cannot be before SAP Invoice Raised Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SAP_Account_match_Opportunity_Account</fullName>
        <active>true</active>
        <errorConditionFormula>(ISNEW() || ISCHANGED(SO_AccountId__c) ) &amp;&amp;
NOT(ISBLANK(SO_AccountId__c)) &amp;&amp; SO_Opportunity__r.AccountId !=  SO_AccountId__c</errorConditionFormula>
        <errorDisplayField>SO_AccountId__c</errorDisplayField>
        <errorMessage>You must select the Account associated to the opportunity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SO_Validate_Invoice_Payment_Made_Date</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISBLANK(SO_Payment_Made_Date__c)) &amp;&amp; SO_Payment_Made_Date__c &lt; SO_Payment_Request_Sent_Date__c</errorConditionFormula>
        <errorMessage>Payment Made Date cannot be before Payment Request Sent Date.</errorMessage>
    </validationRules>
</CustomObject>